--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  align-items: center;
+  flex-direction: column;
 }
+.con {
+  background-color: #eeeeee89;
+  height: 250px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
+
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin-top: 20px;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-add {
+  margin-bottom: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (min-width: 1025px) {
+  .con {
+    width: 60%;
   }
 }
