--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 .con {
   background-color: #eeeeee89;
   height: 250px;
-
+  text-align: center;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
