--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   justify-content: space-between;
-  gap: 50px;
+  padding: 25px;
   align-items: center;
   flex-direction: column;
 }
@@ -12,7 +12,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-
+  margin: 25px;
   align-items: center;
   justify-content: space-around;
   margin-top: 20px;
