--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -11,7 +11,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  gap: 60px;
+  padding: 50px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.252);
   border-radius: 10px;
 }
@@ -20,17 +20,10 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 20px;
-}
-
-.lable {
-  display: flex;
-  justify-content: center;
-
-  gap: 50px;
-  align-items: center;
+  padding: 10px;
 }
 
 .input {
   width: 200px;
+  margin: 10px;
 }
